# pywinrdp

./: .cruft.json  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: release.yaml
pywinrdp/: __main__.py  axwidget.py  mainwindow.py  rdpwidget.py
samples/: sample_pyside6.py  sample_qt5.py
vagrant/: Vagrantfile  install.sh
